gccida/c2/ix86_prepare_fp_compare_args
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/i386.c:7683:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  ix86_prepare_fp_compare_args( rtx_code code, rtx *pop0, rtx *pop1) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/i386.c:7683:41: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  ix86_prepare_fp_compare_args( rtx_code code, rtx *pop0, rtx *pop1) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/i386.c:7692:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/i386.c:7706:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v25; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/i386.c:7749:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = mode_class_0[v18]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/i386.c:7768:20: error: use of undeclared identifier 'machine_mode'
v14 = force_reg( ( machine_mode)BYTE2( v6), v4); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/i386.c:7780:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[BYTE2( v6)]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/i386.c:7807:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v30 = mode_class_0[v29]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_prepare_fp_compare_args/src/obj/i386.o] Error 1
